fix: hover button animation feat: add active shift button

--- a/style.scss
+++ b/style.scss
@@ -121,9 +121,11 @@ $color-straw: #FFC173; //соломенный
   font-family: Arial, Helvetica, sans-serif;
     &:hover{
       cursor: pointer;
+      transform: scale(0.98);
+      border: 1px solid $color-secondary;
     }
     &:active{
-      transform: scale(0.97);
+      transform: scale(0.95);
     }
 }
 .keyArrow {
@@ -140,9 +142,11 @@ $color-straw: #FFC173; //соломенный
   font-family: Arial, Helvetica, sans-serif;
   &:hover{
     cursor: pointer;
+    transform: scale(0.98);
+    border: 1px solid $color-secondary;
   }
   &:active{
-    transform: scale(0.97);
+    transform: scale(0.94);
   }
 }
 .keyTAB{
@@ -158,6 +162,7 @@ $color-straw: #FFC173; //соломенный
   font-family: Arial, Helvetica, sans-serif;
   &:hover{
     cursor: pointer;
+    transform: scale(0.99);
   }
   &:active{
     transform: scale(0.97);
@@ -176,9 +181,10 @@ $color-straw: #FFC173; //соломенный
   font-family: Arial, Helvetica, sans-serif;
    &:hover{
       cursor: pointer;
+      transform: scale(0.99);
     }
     &:active{
-      transform: scale(0.97);
+      transform: scale(0.95);
     }
 }
 .keyEnter{
@@ -194,9 +200,10 @@ $color-straw: #FFC173; //соломенный
   font-family: Arial, Helvetica, sans-serif;
   &:hover{
     cursor: pointer;
+    transform: scale(0.99);
   }
   &:active{
-    transform: scale(0.97);
+    transform: scale(0.95);
   }
 }
 .space{
@@ -231,6 +238,7 @@ $color-straw: #FFC173; //соломенный
   font-family: Arial, Helvetica, sans-serif;
     &:hover{
       cursor: pointer;
+      transform: scale(0.98);
     }
     &:active{
       transform: scale(0.97);
@@ -238,7 +246,7 @@ $color-straw: #FFC173; //соломенный
 }
 
 .rightShift{
-  width: 5%;
+  width: 5.2%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -250,6 +258,7 @@ $color-straw: #FFC173; //соломенный
   font-family: Arial, Helvetica, sans-serif;
    &:hover{
       cursor: pointer;
+      transform: scale(0.99);
     }
     &:active{
       transform: scale(0.97);
